force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Contrato_de_Locacao__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Locacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Locação</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Pesquisas de Satisfação</relationshipLabel>
    <relationshipName>Pesquisas_de_Satisfa_o</relationshipName>
    <type>Lookup</type>
</CustomField>