force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/ContratoLoc__c.field-meta.xml
<CustomField>
    <fullName>ContratoLoc__c</fullName>
    <label>ContratoLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>