force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>