force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/OT2__c.field-meta.xml
<CustomField>
    <fullName>OT2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de trabalho</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Pesquisas de Satisfação</relationshipLabel>
    <relationshipName>Pesquisas_de_Satisfa_o</relationshipName>
    <type>Lookup</type>
</CustomField>