force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/OT__c.field-meta.xml
<CustomField>
    <fullName>OT__c</fullName>
    <label>OT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>