force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Pedido2__c.field-meta.xml
<CustomField>
    <fullName>Pedido2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pesquisas de Satisfação</relationshipLabel>
    <relationshipName>Pesquisas_de_Satisfa_o</relationshipName>
    <type>Lookup</type>
</CustomField>