force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>