force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Prazo__c.field-meta.xml
<CustomField>
    <fullName>Prazo__c</fullName>
    <label>Avaliação do Prazo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>