force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Respostas__c.field-meta.xml
<CustomField>
    <fullName>Respostas__c</fullName>
    <label>Respostas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>