force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Telefone_para_Contato__c.field-meta.xml
<CustomField>
    <fullName>Telefone_para_Contato__c</fullName>
    <label>Telefone para Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>