force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <formula>IF(AND(Nota__c &gt;= 0, Nota__c &lt;=6), &quot;Detrator&quot;,
IF(AND(Nota__c = 7, Nota__c = 6), &quot;Neutro&quot;,&quot;Promotor&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Cliente</label>
    <type>Text</type>
</CustomField>