force-app/main/default/objects/Pesquisa_de_Satisfacao__c/recordTypes/Locacao.recordType-meta.xml
<RecordType>
    <fullName>Locacao</fullName>
    <active>true</active>
    <label>Locação</label>
</RecordType>