force-app/main/default/objects/Pesquisa_de_Satisfacao__c/recordTypes/Servico.recordType-meta.xml
<RecordType>
    <fullName>Servico</fullName>
    <active>true</active>
    <label>Serviço</label>
</RecordType>