force-app/main/default/objects/Pesquisa_de_Satisfacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nota__c</columns>
    <columns>Pedido2__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pesquisa_de_Satisfacao__c.Comercial</value>
    </filters>
    <label>Comercial</label>
</ListView>