force-app/main/default/objects/Pesquisa_de_Satisfacao__c/listViews/Servicos.listView-meta.xml
<ListView>
    <fullName>Servicos</fullName>
    <columns>NAME</columns>
    <columns>Nota__c</columns>
    <columns>OT2__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pesquisa_de_Satisfacao__c.Servico</value>
    </filters>
    <label>Serviços</label>
</ListView>